Adding simple bot_manager script. Can spin up containers and kill them through the file. Also changing some naming in docker-compose-test and enabling logging with -u command

--- a/docker-compose-test.yml
+++ b/docker-compose-test.yml
@@ -3,8 +3,8 @@ services:
         image: redis:latest
 
     fake_chat_watcher:
-        image: fake_watcher:latest
+        image: fake-chat-watcher:latest
         depends_on:
             - redis
         command:
-          python main.py
+          python -u main.py
