--- a/docker-compose-test.yml
+++ b/docker-compose-test.yml
@@ -1,6 +1,11 @@
 services:
     redis:
         image: redis:latest
+        ports:
+            - 6379:6379
+        volumes: 
+            - ./redis.conf:/redis.conf
+        command: ["redis-server", "/redis.conf"]
 
     fake_chat_watcher:
         image: fake-chat-watcher:latest
