Configured docker compose file to name redis container as 'redis' and changed hostname in fake_chat_watcher/main.py to match it

--- a/docker-compose-test.yml
+++ b/docker-compose-test.yml
@@ -6,6 +6,7 @@ services:
         volumes: 
             - ./redis.conf:/redis.conf
         command: ["redis-server", "/redis.conf"]
+        container_name: redis
 
     fake_chat_watcher:
         image: fake-chat-watcher:latest
