--- a/docker-compose-test.yml
+++ b/docker-compose-test.yml
@@ -1,11 +1,22 @@
 services:
+    mongo:
+        container_name: mongo
+        image: mongo:latest
+        environment:
+            MONGO_INITDB_ROOT_USERNAME: root
+            MONGO_INITDB_ROOT_PASSWORD: rootpassword
+        ports:
+            - 27017:27017
+        volumes:
+            - mongo_data_container:/data/db
+
     redis:
         image: redis:latest
         ports:
             - 6379:6379
-        volumes: 
-            - ./redis.conf:/redis.conf
-        command: ["redis-server", "/redis.conf"]
+        # volumes:
+            # - ./redis.conf:/usr/local/etc/redis/redis.conf
+        # command: ["redis-server", "/usr/local/etc/redis/redis.conf"]
         container_name: redis
 
     fake_chat_watcher:
