--- a/docker-compose-test.yml
+++ b/docker-compose-test.yml
@@ -11,17 +11,27 @@ services:
             # - mongo_data_container:/data/db
 
     redis:
+        container_name: redis
         image: redis:latest
         ports:
             - 6379:6379
         # volumes:
             # - ./redis.conf:/usr/local/etc/redis/redis.conf
         # command: ["redis-server", "/usr/local/etc/redis/redis.conf"]
-        container_name: redis
 
     fake_chat_watcher:
+        container_name: fake_chat_watcher
         image: fake-chat-watcher:latest
         depends_on:
             - redis
         command:
           python -u main.py
+
+    migrator:
+        container_name: migrator
+        image: data-migrator:latest
+        depends_on:
+            - redis
+            - mongo
+        command:
+            python -u migrator.py
