--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/NikolaPanayotov/twitch-emote-tracker#readme",
   "dependencies": {
     "ejs": "^3.1.6",
+    "events": "^3.3.0",
     "express": "^4.17.1",
     "mongoose": "^5.12.4",
     "redis": "^3.1.1"
