Enabled frontend page to read from DB to initialize page instead of using placeholders. Also loads images of each emote

--- a/data_migrator/Dockerfile
+++ b/data_migrator/Dockerfile
@@ -6,6 +6,6 @@ COPY requirements.txt requirements.txt
 
 RUN pip3 install -r requirements.txt
 
-COPY migrator.py /usr/local/migrator
+COPY * /usr/local/migrator
 
 CMD ["python","-u","migrator.py"]
