--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "events": "^3.3.0",
     "express": "^4.17.1",
     "mongoose": "^5.12.4",
+    "path": "^0.12.7",
     "redis": "^3.1.1"
   }
 }
