--- a/redis.conf
+++ b/redis.conf
@@ -214,7 +214,7 @@ always-show-logo yes
 #   points by adding a save directive with a single empty string argument
 #   like in the following example:
 #
-#   save ""
+  save ""
 
 # save 900 1
 # save 300 10
@@ -233,7 +233,7 @@ always-show-logo yes
 # and persistence, you may want to disable this feature so that Redis will
 # continue to work as usual even if there are problems with disk,
 # permissions, and so forth.
-stop-writes-on-bgsave-error yes
+# stop-writes-on-bgsave-error yes
 
 # Compress string objects using LZF when dump .rdb databases?
 # For default that's set to 'yes' as it's almost always a win.
