--- a/chat_watcher/Dockerfile
+++ b/chat_watcher/Dockerfile
@@ -9,4 +9,4 @@ RUN pip3 install -r requirements.txt
 # COPY main.py /usr/local/fake_chat_watcher
 
 # CMD ["python", "main.py", "args", "go", "here", "when argparse is added ;)"]
-CMD ["python","-u","bot.py"]
+# CMD ["python","-u","bot.py", "nl_Kripp"]
