--- a/chat_watcher/Dockerfile
+++ b/chat_watcher/Dockerfile
@@ -6,7 +6,5 @@ COPY . .
 
 RUN pip3 install -r requirements.txt
 
-# COPY main.py /usr/local/fake_chat_watcher
-
-# CMD ["python", "main.py", "args", "go", "here", "when argparse is added ;)"]
+# EXAMPLE USE:
 # CMD ["python","-u","bot.py", "nl_Kripp"]
